--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
 <header aria-label="Социальная навигация">
     <a class="telegram-link" href="https://t.me/Sharkosic" target="_blank" rel="noopener" aria-label="Telegram">
         <!-- относительный путь к изображению логотипа Telegram (png/jpg/svg) -->
-        <img class="telegram-logo" src="static/images/telegram_logo.png" alt="Telegram" width="84" height="84">
+        <img class="telegram-logo" src="/static/images/telegram_logo.png" alt="Telegram" width="84" height="84">
     </a>
 </header>
 
 <!-- Видео (локальное) -->
 <section id="bg-video" aria-label="Наше видео">
     <video autoplay muted loop playsinline>
-        <source src="static/videos/trailer.mp4" type="video/mp4" />
+        <source src="/static/videos/trailer.mp4" type="video/mp4" />
         Ваш браузер не поддерживает видео.
     </video>
 </section>
@@ -152,7 +152,7 @@
             <p>Delve into the dark depths of a forgotten kingdom. Explore ancient corridors, uncover secrets, и battle mysterious forces to restore balance to the world.</p>
         </div>
         <div class="image">
-            <img src="static/images/shot1.png" alt="Скриншот: древний зал"
+            <img src="/static/images/shot1.png" alt="Скриншот: древний зал"
                  style="width:100%; height:auto; border-radius:8px; display:none;"
                  onload="this.style.display='block'; this.nextElementSibling.style.display='none';"
             >
@@ -168,7 +168,7 @@
 
     <div class="block alt" aria-label="Описание и скриншот чередование">
         <div class="image">
-            <img src="static/images/shot2.png" alt="Скриншот: бой в тёмном зале"
+            <img src="/static/images/shot2.png" alt="Скриншот: бой в тёмном зале"
                  style="width:100%; height:auto; border-radius:8px; display:none;"
                  onload="this.style.display='block'; this.nextElementSibling.style.display='none';"
             >
